Estructura básica v1, sin estilos

--- a/index.html
+++ b/index.html
@@ -1,12 +1,172 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-  </body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fabricio Castillo - Portfolio</title>
+</head>
+<body>
+  <header>
+    <div id="sticky-header-bar">
+    <img src="" alt="" id="logo-argprog">
+    <p>Argentina Programa #Yo Programo</p>
+    </div>
+    
+    <div id="login">
+      
+    </div>
+  </header>
+
+  <div id="banner">
+    <img src="" alt="Foto de portada de Fabricio Castillo"> <!-- agregar link -->
+  </div>
+
+  <section id="sobre-mi">
+    <div>
+      <div id="foto-perfil">
+        <img src="" alt="Foto de perfil de Fabricio Castillo"><!-- agregar link -->
+      </div>
+      <div id="descripcion-corta">
+        <p>Descripcion corta sobre mi</p>
+      </div>
+    </div>
+
+    <div id="descripcion-larga">
+      <h1 id="nombre-portada">Fabricio Castillo</h1>
+      <p>Hola. Acá va una muy coqueta descripción de quien soy y qué busco. 😉</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ex perspiciatis impedit commodi. Quod recusandae ex obcaecati, non soluta, magnam quibusdam sed, tempore rem eius facere incidunt excepturi amet assumenda!</p>
+    </div>
+
+  </section>
+
+  <section id="experiencia">
+    <h2>Experiencias</h2>
+    <div class="item-experiencia">
+      <img src="" alt="Foto de empleador"><!-- agregar link -->
+      <h3>Programador full-stack en Nowhere</h3>
+      <p>Descripción de experiencia laboral en Nowhere. Tareas que realicé. Equipo conformado. Herramientas utilizadas. </p>
+      <p>Inicio: dd/mm/yyyy</p>
+      <p>Fin: dd/mm/yyyy</p>
+    </div>
+
+    <div class="item-experiencia">
+      <img src="" alt="Foto de empleador"><!-- agregar link -->
+      <h3>Programador full-stack en Nowhere</h3>
+      <p>Descripción de experiencia laboral en Nowhere. Tareas que realicé. Equipo conformado. Herramientas utilizadas. </p>
+      <p>Inicio: dd/mm/yyyy</p>
+      <p>Fin: dd/mm/yyyy</p>
+    </div>
+
+    <div class="item-experiencia">
+      <img src="" alt="Foto de empleador"><!-- agregar link -->
+      <h3>Programador full-stack en Nowhere</h3>
+      <p>Descripción de experiencia laboral en Nowhere. Tareas que realicé. Equipo conformado. Herramientas utilizadas. </p>
+      <p>Inicio: dd/mm/yyyy</p>
+      <p>Fin: dd/mm/yyyy</p>
+    </div>
+
+  </section>
+  
+  <section id="educacion">
+    <div class="item-educacion">
+      <img src="" alt="Foto de institucion educativa"><!-- agregar link -->
+      <h3>Analista en sistemas en Nasa</h3>
+      <p>Curso intensivo en sistemas embebidos en cohetes orbitales. Contenidos del curso. Herramientas aprendidas. Proyectos. </p>
+      <p>Título obtenido: Analista Shunirrrrrr de la Nasa</p>
+      <p>Duración: 3hs</p>
+    </div>
+
+    <div class="item-educacion">
+      <img src="" alt="Foto de institucion educativa"><!-- agregar link -->
+      <h3>Analista en sistemas en Nasa</h3>
+      <p>Curso intensivo en sistemas embebidos en cohetes orbitales. Contenidos del curso. Herramientas aprendidas. Proyectos. </p>
+      <p>Título obtenido: Analista Shunirrrrrr de la Nasa</p>
+      <p>Duración: 3hs</p>
+    </div>
+
+    <div class="item-educacion">
+      <img src="" alt="Foto de institucion educativa"><!-- agregar link -->
+      <h3>Analista en sistemas en Nasa</h3>
+      <p>Curso intensivo en sistemas embebidos en cohetes orbitales. Contenidos del curso. Herramientas aprendidas. Proyectos. </p>
+      <p>Título obtenido: Analista Shunirrrrrr de la Nasa</p>
+      <p>Duración: 3hs</p>
+    </div>
+  </section>
+
+  <section id="skills">
+    <div class="item-skills">
+      <h3>HTML</h3>
+      <img src="" alt="HTML logo"><!-- agregar link -->
+      <div class="barra-progreso"></div>
+    </div>
+
+    <div class="item-skills">
+      <h3>CSS</h3>
+      <img src="" alt="HTML logo"><!-- agregar link -->
+      <div class="barra-progreso"></div>
+    </div>
+
+    <div class="item-skills">
+      <h3>Javascript</h3>
+      <img src="" alt="HTML logo"><!-- agregar link -->
+      <div class="barra-progreso"></div>
+    </div>
+  </section>
+
+  <section id="proyectos">
+    <div class="item-proyectos">
+      <img src="" alt="Proyecto X logo"><!-- agregar link -->
+      <h3>Proyecto X</h3>
+      <p>Descripcion 1. En este proyecto trabaje de esto y aquello y logramos hacer un bonito y util proyecto por el cual me gané un asenso.</p>
+      <p>Fecha de publicacion</p>
+      <p>Tiempo de desarrollo</p>
+      <a href="">Link a github</a>
+      <a href="">Link a página web</a>
+      <img src="" alt="Imagen ProyectoX"><!-- agregar link -->
+      <img src="" alt="Imagen ProyectoX"><!-- agregar link -->
+    </div>
+
+    <div class="item-proyectos">
+      <img src="" alt="Proyecto X logo"><!-- agregar link -->
+      <h3>Proyecto X</h3>
+      <p>Descripcion 1. En este proyecto trabaje de esto y aquello y logramos hacer un bonito y util proyecto por el cual me gané un asenso.</p>
+      <p>Fecha de publicacion</p>
+      <p>Tiempo de desarrollo</p>
+      <a href="">Link a github</a>
+      <a href="">Link a página web</a>
+      <img src="" alt="Imagen ProyectoX"><!-- agregar link -->
+      <img src="" alt="Imagen ProyectoX"><!-- agregar link -->
+    </div>
+
+    <div class="item-proyectos">
+      <img src="" alt="Proyecto X logo"><!-- agregar link -->
+      <h3>Proyecto X</h3>
+      <p>Descripcion 1. En este proyecto trabaje de esto y aquello y logramos hacer un bonito y util proyecto por el cual me gané un asenso.</p>
+      <p>Fecha de publicacion</p>
+      <p>Tiempo de desarrollo</p>
+      <a href="">Link a github</a>
+      <a href="">Link a página web</a>
+      <img src="" alt="Imagen ProyectoX"><!-- agregar link -->
+      <img src="" alt="Imagen ProyectoX"><!-- agregar link -->
+    </div>
+
+    <div class="item-proyectos">
+      <img src="" alt="Proyecto X logo"><!-- agregar link -->
+      <h3>Proyecto X</h3>
+      <p>Descripcion 1. En este proyecto trabaje de esto y aquello y logramos hacer un bonito y util proyecto por el cual me gané un asenso.</p>
+      <p>Fecha de publicacion</p>
+      <p>Tiempo de desarrollo</p>
+      <a href="">Link a github</a>
+      <a href="">Link a página web</a>
+      <img src="" alt="Imagen ProyectoX"><!-- agregar link -->
+      <img src="" alt="Imagen ProyectoX"><!-- agregar link -->
+    </div>
+  </section>
+
+  <section id="footer">
+    <p>Hecho por Fabricio Castillo - 2022</p>
+  </section>
+
+</body>
 </html>
